# learn-fastapi

./: Dockerfile  README.md  day1.py  day2.py  docker-compose.yaml  pyproject.toml
app/: main.py  models.py
app/auth/: auth.py
app/database/: database.py
app/models/: todo.py  user.py
app/routers/: todo.py  user.py
app/schemas/: auth.py  todo.py  user.py
